[gd_scene load_steps=15 format=4 uid="uid://bp0lkfaiynmsa"]

[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="1_gfo8i"]
[ext_resource type="Script" uid="uid://3qkr3idcj832" path="res://Levels/ThreeLoop/SliderCity/slider_city.gd" id="1_t8e8l"]
[ext_resource type="PackedScene" uid="uid://cc4n2fr13d1eh" path="res://Objects/DudDoor/DudDoor.tscn" id="2_k0530"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="2_t8e8l"]
[ext_resource type="PackedScene" uid="uid://d0y011d078tou" path="res://Objects/Box/box.tscn" id="3_4vst8"]
[ext_resource type="PackedScene" uid="uid://binoy2bpne3jf" path="res://Objects/Door/Door.tscn" id="3_40ajj"]
[ext_resource type="PackedScene" uid="uid://d2ed68h0eog6" path="res://Objects/Lever/lever.tscn" id="3_a6eit"]
[ext_resource type="PackedScene" uid="uid://ce0fyafaupkhg" path="res://Objects/Box/heavy_box.tscn" id="4_a6eit"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="5_k0530"]
[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="6_40ajj"]
[ext_resource type="PackedScene" uid="uid://bc4mudwsgjt1o" path="res://Objects/Portal/portal.tscn" id="8_4vst8"]
[ext_resource type="TileSet" uid="uid://c3bbynk3ek2sb" path="res://Environment/hazards.tres" id="11_qlq3w"]
[ext_resource type="FontFile" uid="uid://cxibkck3y8243" path="res://Fonts/DigitalDisco.ttf" id="12_adhkw"]

[sub_resource type="LabelSettings" id="LabelSettings_qlq3w"]
font = ExtResource("12_adhkw")

[node name="SliderCity" type="Node2D"]
script = ExtResource("1_t8e8l")

[node name="DudDoor" parent="." instance=ExtResource("2_k0530")]
position = Vector2(83, 160)

[node name="Door" parent="." instance=ExtResource("3_40ajj")]
position = Vector2(692, 64)

[node name="Button1" parent="." instance=ExtResource("1_gfo8i")]
position = Vector2(570, 304)

[node name="Button2" parent="." instance=ExtResource("1_gfo8i")]
position = Vector2(100, 96)

[node name="Button3" parent="." instance=ExtResource("1_gfo8i")]
position = Vector2(43, 96)

[node name="Lever" parent="." instance=ExtResource("3_a6eit")]
position = Vector2(30, 192)

[node name="Player" parent="." instance=ExtResource("2_t8e8l")]
position = Vector2(85, 192)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 755
limit_bottom = 324

[node name="SlidePlatform1" parent="." instance=ExtResource("5_k0530")]
position = Vector2(328, 204)
scale = Vector2(4.25, 1)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform1" index="0"]
position = Vector2(600, 204)

[node name="SlidePlatform2" parent="." instance=ExtResource("5_k0530")]
position = Vector2(169, 56)
rotation = 1.5708
scale = Vector2(1.25, 1)
speed = 0.08

[node name="Endpoint" parent="SlidePlatform2" index="0"]
position = Vector2(169, -24)

[node name="SlidePlatform3" parent="." instance=ExtResource("5_k0530")]
position = Vector2(203, -42)
rotation = 1.5708
scale = Vector2(1.25, 1)
speed = 0.08

[node name="Endpoint" parent="SlidePlatform3" index="0"]
position = Vector2(203, 56)

[node name="SlidePlatform4" parent="." instance=ExtResource("5_k0530")]
position = Vector2(531, 56)
rotation = 1.5708
scale = Vector2(1.25, 1)

[node name="Endpoint" parent="SlidePlatform4" index="0"]
position = Vector2(531, -24)

[node name="SlidePlatform5" parent="." instance=ExtResource("5_k0530")]
position = Vector2(583, 56)
rotation = 1.5708
scale = Vector2(1.25, 1)

[node name="Endpoint" parent="SlidePlatform5" index="0"]
position = Vector2(583, -24)

[node name="SlidePlatform6" parent="." instance=ExtResource("5_k0530")]
position = Vector2(477, 56)
rotation = 1.5708
scale = Vector2(1.25, 1)

[node name="Endpoint" parent="SlidePlatform6" index="0"]
position = Vector2(477, -24)

[node name="Box" parent="." instance=ExtResource("3_4vst8")]
position = Vector2(159, 176)

[node name="HeavyBox" parent="." instance=ExtResource("4_a6eit")]
position = Vector2(613, 288)

[node name="Hazards" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAAgAAAAAAAAAAQAHAAgAAAAAAAAAAQAIAAgAAAAAAAAAAQAJAAgAAAAAAAAAAQAKAAgAAAAAAAAAAQALAAgAAAAAAAAAAQAMAAgAAAAAAAAAAQANAAgAAAAAAAAAAQAOAAgAAAAAAAAAAQA=")
tile_set = ExtResource("11_qlq3w")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAMAAAAAAAEAAgACAAEAAAAAAAIAAgACAAEAAAAAAAMAAgACAAEAAAAAAAQAAgACAAEAAAAAAAUAAgACAAEAAAAAAAYAAgACAAMAAAAAAAcAAgAAAAMAAAAAAAgAAgACAAEAAAAAAAkAAgACAAEAAAAAAAoAAgACAAEAAAAAAAsAAgACAAEAAAAAAAwAAgACAAMAAAAAAA0AAgABAAEAAAAAAA4AAgABAAEAAAAAAA8AAgABAAEAAAAAABAAAgABAAEAAAAAABEAAgABAAEAAAAAABIAAgABAAEAAAAAABMAAgABAAEAAAABABMAAgABAAEAAAACABMAAgABAAEAAAADABMAAgABAAEAAAAEABMAAgABAAEAAAAFABMAAgABAAEAAAAGABMAAgABAAEAAAAHABMAAgABAAEAAAAIABMAAgABAAEAAAAJABMAAgABAAEAAAAKABMAAgABAAEAAAALABMAAgACAAMAAAAMABMAAgABAAAAAAANABMAAgABAAAAAAAOABMAAgABAAAAAAAPABMAAgABAAAAAAAQABMAAgABAAAAAAARABMAAgABAAAAAAASABMAAgABAAAAAAATABMAAgABAAAAAAAUABMAAgABAAAAAAAVABMAAgABAAAAAAAWABMAAgABAAAAAAAXABMAAgABAAAAAAAYABMAAgABAAAAAAAZABMAAgABAAAAAAAaABMAAgABAAAAAAAbABMAAgABAAAAAAAcABMAAgABAAAAAAAdABMAAgAAAAQAAAAeABMAAgACAAMAAAAfABMAAgABAAAAAAAgABMAAgABAAAAAAAhABMAAgAAAAQAAAAiABMAAgACAAMAAAAjABMAAgABAAAAAAAkABMAAgABAAAAAAAlABMAAgABAAAAAAAmABMAAgABAAAAAAAnABMAAgABAAAAAAAoABMAAgABAAAAAAApABMAAgABAAAAAAAqABMAAgABAAAAAAArABMAAgABAAAAAAAsABMAAgABAAAAAAAtABMAAgABAAAAAAAuABMAAgAAAAQAAAAuABIAAgAAAAEAAAAuABEAAgAAAAEAAAAuABAAAgAAAAEAAAAuAA8AAgAAAAEAAAAuAA4AAgAAAAEAAAAuAA0AAgABAAMAAAAuAAwAAgABAAEAAAAuAAsAAgABAAEAAAAuAAoAAgABAAEAAAAuAAkAAgABAAEAAAAuAAgAAgABAAEAAAAuAAcAAgABAAEAAAAuAAYAAgAAAAQAAAAuAAUAAgAAAAEAAAAuAAQAAgAAAAEAAAAuAAMAAgAAAAEAAAAuAAIAAgAAAAEAAAAuAAEAAgAAAAEAAAAuAAAAAgABAAMAAAAtAAAAAgABAAIAAAAsAAAAAgABAAIAAAArAAAAAgABAAIAAAAqAAAAAgABAAIAAAApAAAAAgABAAIAAAAoAAAAAgABAAIAAAAnAAAAAgABAAIAAAAmAAAAAgABAAIAAAAlAAAAAgABAAIAAAAkAAAAAgABAAIAAAAjAAAAAgABAAIAAAAiAAAAAgABAAIAAAAhAAAAAgABAAIAAAAgAAAAAgABAAIAAAAfAAAAAgABAAIAAAAeAAAAAgABAAIAAAAdAAAAAgABAAIAAAAcAAAAAgABAAIAAAAbAAAAAgABAAIAAAAaAAAAAgABAAIAAAAZAAAAAgABAAIAAAAYAAAAAgABAAIAAAAXAAAAAgABAAIAAAAWAAAAAgABAAIAAAAVAAAAAgABAAIAAAAUAAAAAgABAAIAAAATAAAAAgABAAIAAAASAAAAAgABAAIAAAARAAAAAgABAAIAAAAQAAAAAgAAAAMAAAAPAAAAAgABAAMAAAAOAAAAAgABAAIAAAANAAAAAgABAAIAAAAMAAAAAgABAAIAAAALAAAAAgABAAIAAAAKAAAAAgABAAIAAAAJAAAAAgABAAIAAAAIAAAAAgABAAIAAAAHAAAAAgABAAIAAAAGAAAAAgABAAIAAAAFAAAAAgABAAIAAAAEAAAAAgABAAIAAAADAAAAAgABAAIAAAACAAAAAgABAAIAAAABAAAAAgABAAIAAAAtAAYAAgABAAAAAAAsAAYAAgABAAAAAAArAAYAAgABAAAAAAAqAAYAAgABAAAAAAApAAYAAgABAAAAAAAoAAYAAgABAAAAAAAnAAYAAgABAAAAAAAmAAYAAgABAAAAAAAlAAYAAgABAAAAAAAkAAYAAgABAAAAAAAjAAYAAgABAAAAAAAiAAYAAgABAAAAAAAhAAYAAgABAAAAAAAgAAYAAgABAAAAAAAfAAYAAgABAAAAAAAeAAYAAgABAAAAAAAeAAcAAgABAAEAAAAfAAcAAgABAAEAAAAgAAcAAgABAAEAAAAhAAcAAgABAAEAAAAiAAcAAgABAAEAAAAjAAcAAgABAAEAAAAkAAcAAgABAAEAAAAlAAcAAgABAAEAAAAmAAcAAgABAAEAAAAnAAcAAgABAAEAAAAoAAcAAgABAAEAAAApAAcAAgABAAEAAAAqAAcAAgABAAEAAAArAAcAAgABAAEAAAAsAAcAAgABAAEAAAAtAAcAAgABAAEAAAABAAwAAgABAAAAAAACAAwAAgABAAAAAAADAAwAAgABAAAAAAAEAAwAAgABAAAAAAAFAAwAAgABAAAAAAAGAAwAAgABAAAAAAAHAAwAAgABAAAAAAAIAAwAAgABAAAAAAAJAAwAAgABAAAAAAAKAAwAAgABAAAAAAALAAwAAgACAAAAAAALAA0AAgACAAEAAAALAA4AAgACAAEAAAALAA8AAgACAAEAAAALABAAAgACAAEAAAALABEAAgACAAEAAAALABIAAgACAAEAAAAeAAgAAgABAAEAAAAeAAkAAgABAAEAAAAeAAoAAgABAAEAAAAeAAsAAgABAAEAAAAeAAwAAgABAAEAAAAeAA0AAgAAAAMAAAAeAA4AAgACAAEAAAAeAA8AAgACAAEAAAAeABAAAgACAAEAAAAeABEAAgACAAEAAAAeABIAAgACAAEAAAAMAAYAAgABAAAAAAALAAYAAgABAAAAAAAKAAYAAgABAAAAAAAJAAYAAgABAAAAAAAIAAYAAgABAAAAAAAHAAYAAgABAAAAAAAGAAYAAgABAAAAAAAFAAYAAgABAAAAAAAEAAYAAgABAAAAAAADAAYAAgABAAAAAAACAAYAAgABAAAAAAABAAYAAgABAAAAAAANAAYAAgABAAAAAAAOAAYAAgABAAAAAAAPAAYAAgAAAAQAAAAPAAUAAgAAAAEAAAAPAAQAAgAAAAEAAAAPAAMAAgAAAAEAAAAPAAIAAgAAAAEAAAAPAAEAAgAAAAEAAAAdABIAAgAAAAEAAAAdABEAAgAAAAEAAAAdABAAAgAAAAEAAAAdAA8AAgAAAAEAAAAdAA4AAgAAAAEAAAAdAA0AAgAAAAEAAAAdAAwAAgAAAAEAAAAdAAsAAgAAAAEAAAAdAAoAAgAAAAEAAAAdAAkAAgAAAAEAAAAdAAgAAgAAAAEAAAAdAAcAAgAAAAEAAAAdAAYAAgAAAAAAAAAfAAgAAgABAAEAAAAfAAkAAgABAAEAAAAfAAoAAgABAAEAAAAfAAsAAgABAAEAAAAfAAwAAgABAAEAAAAgAAgAAgABAAEAAAAgAAkAAgABAAEAAAAgAAoAAgABAAEAAAAgAAsAAgABAAEAAAAgAAwAAgABAAEAAAAhAAgAAgABAAEAAAAhAAkAAgABAAEAAAAhAAoAAgABAAEAAAAhAAsAAgABAAEAAAAhAAwAAgABAAEAAAAiAAgAAgABAAEAAAAiAAkAAgABAAEAAAAiAAoAAgABAAEAAAAiAAsAAgABAAEAAAAiAAwAAgABAAEAAAAjAAgAAgABAAEAAAAjAAkAAgABAAEAAAAjAAoAAgABAAEAAAAjAAsAAgABAAEAAAAjAAwAAgABAAEAAAAkAAgAAgABAAEAAAAkAAkAAgABAAEAAAAkAAoAAgABAAEAAAAkAAsAAgABAAEAAAAkAAwAAgABAAEAAAAlAAgAAgABAAEAAAAlAAkAAgABAAEAAAAlAAoAAgABAAEAAAAlAAsAAgABAAEAAAAlAAwAAgABAAEAAAAmAAgAAgABAAEAAAAmAAkAAgABAAEAAAAmAAoAAgABAAEAAAAmAAsAAgABAAEAAAAmAAwAAgABAAEAAAAnAAgAAgABAAEAAAAnAAkAAgABAAEAAAAnAAoAAgABAAEAAAAnAAsAAgABAAEAAAAnAAwAAgABAAEAAAAoAAgAAgABAAEAAAAoAAkAAgABAAEAAAAoAAoAAgABAAEAAAAoAAsAAgABAAEAAAAoAAwAAgABAAEAAAApAAgAAgABAAEAAAApAAkAAgABAAEAAAApAAoAAgABAAEAAAApAAsAAgABAAEAAAApAAwAAgABAAEAAAAqAAgAAgABAAEAAAAqAAkAAgABAAEAAAAqAAoAAgABAAEAAAAqAAsAAgABAAEAAAAqAAwAAgABAAEAAAArAAgAAgABAAEAAAArAAkAAgABAAEAAAArAAoAAgABAAEAAAArAAsAAgABAAEAAAArAAwAAgABAAEAAAAsAAgAAgABAAEAAAAsAAkAAgABAAEAAAAsAAoAAgABAAEAAAAsAAsAAgABAAEAAAAsAAwAAgABAAEAAAAtAAgAAgABAAEAAAAtAAkAAgABAAEAAAAtAAoAAgABAAEAAAAtAAsAAgABAAEAAAAtAAwAAgABAAEAAAAfAA0AAgABAAIAAAAgAA0AAgABAAIAAAAhAA0AAgABAAIAAAAiAA0AAgABAAIAAAAjAA0AAgABAAIAAAAkAA0AAgABAAIAAAAlAA0AAgABAAIAAAAmAA0AAgABAAIAAAAnAA0AAgABAAIAAAAoAA0AAgABAAIAAAApAA0AAgABAAIAAAAqAA0AAgABAAIAAAArAA0AAgABAAIAAAAsAA0AAgABAAIAAAAtAA0AAgABAAIAAAAQAAEAAgACAAEAAAAQAAIAAgACAAEAAAAQAAMAAgACAAEAAAAQAAQAAgACAAEAAAAQAAUAAgACAAEAAAAQAAYAAgACAAEAAAABAAcAAgABAAIAAAACAAcAAgABAAIAAAADAAcAAgABAAIAAAAEAAcAAgABAAIAAAAFAAcAAgABAAIAAAAGAAcAAgABAAIAAAAHAAcAAgABAAIAAAAIAAcAAgABAAIAAAAJAAcAAgABAAIAAAAKAAcAAgABAAIAAAALAAcAAgABAAIAAAAMAAcAAgABAAIAAAANAAcAAgABAAIAAAAOAAcAAgABAAIAAAAPAAcAAgABAAIAAAAQAAcAAgACAAIAAAABAA0AAgABAAEAAAABAA4AAgABAAEAAAABAA8AAgABAAEAAAABABAAAgABAAEAAAABABEAAgABAAEAAAABABIAAgABAAEAAAACAA0AAgABAAEAAAACAA4AAgABAAEAAAACAA8AAgABAAEAAAACABAAAgABAAEAAAACABEAAgABAAEAAAACABIAAgABAAEAAAADAA0AAgABAAEAAAADAA4AAgABAAEAAAADAA8AAgABAAEAAAADABAAAgABAAEAAAADABEAAgABAAEAAAADABIAAgABAAEAAAAEAA0AAgABAAEAAAAEAA4AAgABAAEAAAAEAA8AAgABAAEAAAAEABAAAgABAAEAAAAEABEAAgABAAEAAAAEABIAAgABAAEAAAAFAA0AAgABAAEAAAAFAA4AAgABAAEAAAAFAA8AAgABAAEAAAAFABAAAgABAAEAAAAFABEAAgABAAEAAAAFABIAAgABAAEAAAAGAA0AAgABAAEAAAAGAA4AAgABAAEAAAAGAA8AAgABAAEAAAAGABAAAgABAAEAAAAGABEAAgABAAEAAAAGABIAAgABAAEAAAAHAA0AAgABAAEAAAAHAA4AAgABAAEAAAAHAA8AAgABAAEAAAAHABAAAgABAAEAAAAHABEAAgABAAEAAAAHABIAAgABAAEAAAAIAA0AAgABAAEAAAAIAA4AAgABAAEAAAAIAA8AAgABAAEAAAAIABAAAgABAAEAAAAIABEAAgABAAEAAAAIABIAAgABAAEAAAAJAA0AAgABAAEAAAAJAA4AAgABAAEAAAAJAA8AAgABAAEAAAAJABAAAgABAAEAAAAJABEAAgABAAEAAAAJABIAAgABAAEAAAAKAA0AAgABAAEAAAAKAA4AAgABAAEAAAAKAA8AAgABAAEAAAAKABAAAgABAAEAAAAKABEAAgABAAEAAAAKABIAAgABAAEAAAD//xMAAgABAAEAAAD//xIAAgABAAEAAAD//xEAAgABAAEAAAD//xAAAgABAAEAAAD//w8AAgABAAEAAAD//w4AAgABAAEAAAD//w0AAgABAAEAAAD//wwAAgABAAEAAAD//wsAAgABAAEAAAD//woAAgABAAEAAAD//wkAAgABAAEAAAD//wgAAgABAAEAAAD//wcAAgABAAEAAAD//wYAAgABAAEAAAD//wUAAgABAAEAAAD//wQAAgABAAEAAAD//wMAAgABAAEAAAD//wIAAgABAAEAAAD//wEAAgABAAEAAAD//wAAAgABAAEAAAD/////AgABAAEAAAABAP//AgABAAEAAAACAP//AgABAAEAAAADAP//AgABAAEAAAAEAP//AgABAAEAAAAFAP//AgABAAEAAAAGAP//AgABAAEAAAAHAP//AgABAAEAAAAIAP//AgABAAEAAAAJAP//AgABAAEAAAAKAP//AgABAAEAAAALAP//AgABAAEAAAAMAP//AgABAAEAAAANAP//AgABAAEAAAAOAP//AgABAAEAAAAPAP//AgABAAEAAAAQAP//AgABAAEAAAARAP//AgABAAEAAAASAP//AgABAAEAAAATAP//AgABAAEAAAAUAP//AgABAAEAAAAVAP//AgABAAEAAAAWAP//AgABAAEAAAAXAP//AgABAAEAAAAYAP//AgABAAEAAAAZAP//AgABAAEAAAAaAP//AgABAAEAAAAbAP//AgABAAEAAAAcAP//AgABAAEAAAAdAP//AgABAAEAAAAeAP//AgABAAEAAAAfAP//AgABAAEAAAAgAP//AgABAAEAAAAhAP//AgABAAEAAAAiAP//AgABAAEAAAAjAP//AgABAAEAAAAkAP//AgABAAEAAAAlAP//AgABAAEAAAAmAP//AgABAAEAAAAnAP//AgABAAEAAAAoAP//AgABAAEAAAApAP//AgABAAEAAAAqAP//AgABAAEAAAArAP//AgABAAEAAAAsAP//AgABAAEAAAAtAP//AgABAAEAAAAuAP//AgABAAEAAAAAAP//AgABAAEAAAAvAP//AgABAAEAAAAvAAAAAgABAAEAAAAvAAEAAgABAAEAAAAvAAIAAgABAAEAAAAvAAMAAgABAAEAAAAvAAQAAgABAAEAAAAvAAUAAgABAAEAAAAvAAYAAgABAAEAAAAvAAcAAgABAAEAAAAvAAgAAgABAAEAAAAvAAkAAgABAAEAAAAvAAoAAgABAAEAAAAvAAsAAgABAAEAAAAvAAwAAgABAAEAAAAvAA0AAgABAAEAAAAvAA4AAgABAAEAAAAvAA8AAgABAAEAAAAvABAAAgABAAEAAAAvABEAAgABAAEAAAAvABIAAgABAAEAAAAvABMAAgABAAEAAAAvABQAAgABAAEAAAAuABQAAgABAAEAAAAtABQAAgABAAEAAAAsABQAAgABAAEAAAArABQAAgABAAEAAAAqABQAAgABAAEAAAApABQAAgABAAEAAAAoABQAAgABAAEAAAAnABQAAgABAAEAAAAmABQAAgABAAEAAAAlABQAAgABAAEAAAAkABQAAgABAAEAAAAjABQAAgABAAEAAAAiABQAAgABAAEAAAAhABQAAgABAAEAAAAgABQAAgABAAEAAAAfABQAAgABAAEAAAAeABQAAgABAAEAAAAdABQAAgABAAEAAAAcABQAAgABAAEAAAAbABQAAgABAAEAAAAaABQAAgABAAEAAAAZABQAAgABAAEAAAAYABQAAgABAAEAAAAXABQAAgABAAEAAAAWABQAAgABAAEAAAAVABQAAgABAAEAAAAUABQAAgABAAEAAAATABQAAgABAAEAAAASABQAAgABAAEAAAARABQAAgABAAEAAAAQABQAAgABAAEAAAAPABQAAgABAAEAAAAOABQAAgABAAEAAAANABQAAgABAAEAAAAMABQAAgABAAEAAAALABQAAgABAAEAAAAKABQAAgABAAEAAAAJABQAAgABAAEAAAAIABQAAgABAAEAAAAHABQAAgABAAEAAAAGABQAAgABAAEAAAAFABQAAgABAAEAAAAEABQAAgABAAEAAAADABQAAgABAAEAAAACABQAAgABAAEAAAABABQAAgABAAEAAAAAABQAAgABAAEAAAD//xQAAgABAAEAAAAiABIAAgACAAAAAAAhABIAAgAAAAAAAAAMABAAAQASAAAAAAAMABEAAQASAAEAAAAcABAAAQAVAAAAAAAcABEAAQAVAAEAAAA=")
tile_set = ExtResource("6_40ajj")

[node name="Portal" parent="." instance=ExtResource("8_4vst8")]
position = Vector2(464, 174)

[node name="Portal2" parent="." instance=ExtResource("8_4vst8")]
position = Vector2(735, 285)

[node name="Portal3" parent="." instance=ExtResource("8_4vst8")]
position = Vector2(493, 285)
color = 1

[node name="Portal4" parent="." instance=ExtResource("8_4vst8")]
position = Vector2(240, 76)
color = 1

[node name="Label" type="Label" parent="."]
offset_left = 19.0
offset_top = 203.0
offset_right = 178.0
offset_bottom = 276.0
text = "You now have access
to 3 loops. Cycle
between them with
'1' '2' and '3'."
label_settings = SubResource("LabelSettings_qlq3w")
horizontal_alignment = 1

[connection signal="just_pressed" from="Button1" to="." method="_on_button_1_just_pressed"]
[connection signal="just_unpressed" from="Button1" to="." method="_on_button_1_just_unpressed"]
[connection signal="just_pressed" from="Button2" to="." method="_on_button_2_just_pressed"]
[connection signal="just_unpressed" from="Button2" to="." method="_on_button_2_just_unpressed"]
[connection signal="just_pressed" from="Button3" to="." method="_on_button_3_just_pressed"]
[connection signal="just_unpressed" from="Button3" to="." method="_on_button_3_just_unpressed"]
[connection signal="switched" from="Lever" to="." method="_on_lever_switched"]
[connection signal="body_entered" from="Hazards/Laser" to="Hazards/Laser" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@624998" to="Hazards/@Area2D@624998" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@624999" to="Hazards/@Area2D@624999" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@625000" to="Hazards/@Area2D@625000" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@625001" to="Hazards/@Area2D@625001" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@625002" to="Hazards/@Area2D@625002" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@625003" to="Hazards/@Area2D@625003" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@625004" to="Hazards/@Area2D@625004" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@625005" to="Hazards/@Area2D@625005" method="_on_body_entered"]

[editable path="SlidePlatform1"]
[editable path="SlidePlatform2"]
[editable path="SlidePlatform3"]
[editable path="SlidePlatform4"]
[editable path="SlidePlatform5"]
[editable path="SlidePlatform6"]
